--- a/source/assets/styles/homepage/_about.scss
+++ b/source/assets/styles/homepage/_about.scss
@@ -1,21 +1,6 @@
 /* ==========================================================================
    Homepage: About Fold
-   ==========================================================================
-
-#about {
-  .prose {
-    @include col(12/12);
-
-    @include media(medium-up) {
-      @include col(10/12, $offset: 1/12);
-    }
-
-    @include media(large-up) {
-      @include col(8/12, $offset: 2/12);
-    }
-  }
-}
-*/
+   ==========================================================================*/
 
 #about {
   .fold__body {
@@ -24,6 +9,7 @@
       float: none;
       margin-left: 0;
       margin-top: 0em;
+      margin-bottom: 3em;
     }
     @include media(medium-up) {
       float: left;
@@ -31,6 +17,7 @@
       margin-top: -6em;
       margin-left: 11%;
       padding-top: 2em;
+      margin-bottom: 0em;
     }
   }
 }
@@ -43,11 +30,10 @@
 
   &:first-of-type {
     @include media(xsmall-up) {
-      width: 100%;
-      float: none;
-      margin-left: 0;
+      display: none;
     }
     @include media(medium-up) {
+      display: block;
       margin-top: 8em;
       width: 45%;
       float: left;
@@ -63,7 +49,10 @@
     float: right;
   }
   &:nth-of-type(4) {
-    width: 64.5%;
+    width: 100%;
     float: right;
+    @include media(medium-up) {
+      width: 64.5%;
+    }
   }
 }
